:arrow_up: Updating build file for Java 16 #336